# algo3

./: CMakeLists.txt
TP2/: .gitignore  Makefile  defines.h  main.cpp  parser.cpp
TP2/EJ3/source/: Experimentation.h  Solution.h
TP2/Ej1/: EXP_EJ1.ipynb  Ej1.cpp  Ej1.h  Makefile  OrderedPrints.cpp  OrderedPrints.h  Parser.cpp  Parser.h  Solution.cpp  Solution.h  ej1.cpp  generator.py
TP2/Ej1/SinQuilombos/: Ej1.cpp  Ej1.h  Makefile  input  main.cpp  rinput
TP2/Ej1/exp/outputs/: output.csv
TP2/Ej1/test/: 100_inputs  input
TP2/Ej2/: Ej2.cpp  Ej2.h  Experimentation.cpp  Experimentation.h  Generator.cpp  Generator.h  Parser.cpp  Parser.h  Solution.h  graph_medium.html  input  input_big  input_medium  input_small  main.cpp
TP2/Ej2/codigo/: Ej2.h  main.cpp
TP2/Ej2/experiments/: README  index_experiments
TP2/Ej2/experiments/exp0/: exp0.py  main  main.cpp
TP2/Ej2/experiments/exp1/: Ej2.cpp  exp1.csv  exp1all.py  main
TP2/Ej2/experiments/exp1/.ipynb_checkpoints/: Experiment1-checkpoint.ipynb  Experiment2-checkpoint.ipynb
TP2/Ej2/experiments/exp1/code/: Makefile  main  main.cpp
TP2/Ej2/experiments/exp1/complete/: exp1complete.py
TP2/Ej2/experiments/exp1/datos/: Experiment1.ipynb  exp1complete.csv  exp1sparse.csv
TP2/Ej2/experiments/exp1/random/: exp1random.py
TP2/Ej2/experiments/exp2/: exp2all-b.py  exp2all.py  main.cpp
TP2/Ej2/experiments/scripts/: backup-graphs.py  random_graph.py
TP2/Ej3/: Ej3.cpp  Ej3.h  Experimentation.cpp  Experimentation.h  Generator.cpp  Generator.h  HeavyTransportation.cpp  HeavyTransportation.h  Parser.cpp  Parser.h  Solution.cpp  Solution.h  defines.h  main.cpp
TP2/Ej3/Resultados/: second_experiment.csv  third_experiment.csv
TP2/Ej3/source/: Experimentation.cpp  Generator.h  HeavyTransportation.cpp  HeavyTransportation.h  Solution.cpp
TP2/Ej3/source/Resultados/: first_experiment.csv
TP2/Experimentacion/: EJ3.ipynb  experimentar.py  experimentar.sh  parser.py
TP2/Experimentacion/.ipynb_checkpoints/: EJ3-checkpoint.ipynb
TP2/Experimentacion/Resultados/EJ3/: first_experiment.csv  second_experiment.csv
TP2/ejecutables/: EJ1  EJ2  EJ3
(+40 files in other folders)
